Improve Go scan algorithm (#45)